@@ -177,8 +177,14 @@ CORBA::Boolean NTriangulation_i::hasBoundaryFaces() {
 CORBA::Boolean NTriangulation_i::isZeroEfficient() {
     return MY_ENGINE_OBJECT->isZeroEfficient();
 }
+CORBA::Boolean NTriangulation_i::knowsZeroEfficient() {
+    return MY_ENGINE_OBJECT->knowsZeroEfficient();
+}
 CORBA::Boolean NTriangulation_i::hasSplittingSurface() {
     return MY_ENGINE_OBJECT->hasSplittingSurface();
+}
+CORBA::Boolean NTriangulation_i::knowsSplittingSurface() {
+    return MY_ENGINE_OBJECT->knowsSplittingSurface();
 }
 CORBA::Boolean NTriangulation_i::crushMaximalForest() {
     return MY_ENGINE_OBJECT->crushMaximalForest();
