@@ -95,7 +95,9 @@ class NTriangulation_i :
         virtual CORBA::Boolean isConnected();
         virtual CORBA::Boolean hasBoundaryFaces();
         virtual CORBA::Boolean isZeroEfficient();
+        virtual CORBA::Boolean knowsZeroEfficient();
         virtual CORBA::Boolean hasSplittingSurface();
+        virtual CORBA::Boolean knowsSplittingSurface();
         virtual CORBA::Boolean crushMaximalForest();
         virtual CORBA::Boolean intelligentSimplify();
         virtual CORBA::Boolean simplifyToLocalMinimum(CORBA::Boolean perform);
