@@ -30,7 +30,8 @@ Regina - A Normal Surface Theory Calculator
         Class NPerm:
             - Added operators = and != and constructor NPerm(const NPerm&).
         Class NTriangulation:
-            - Added isZeroEfficient(), hasSplittingSurface().
+            - Added isZeroEfficient(), hasSplittingSurface(),
+              knowsZeroEfficient() and knowsSplittingSurface().
             - Added extra condition to shellBoundary() covering two
               boundary faces plus two identified faces.
             - Added extra condition to twoZeroMove(NEdge*, ...) covering
